# algorithmsAndDataStructures

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  books.md  codingInterviewPreparationPlatforms.md  competitions.md  lec2_sorting_and_search  main.cpp  people.md  refs.md  todo.md
00_roadmap/: core-starter-set.md  (+2 more)
CLRS/: CMakeLists.txt
CLRS/ch2/: countInversions.cpp  hornersRule.cpp  mergeSort.cpp  selectionSort.cpp  twoSum.cpp
Codeforces/: CMakeLists.txt  Contests.md  README.md  people.md  tutorials.md
Codeforces/RMQ/: SparseTable.cpp
Codeforces/arrays/: PetyaAndStrings.hpp  candies.cpp  cashier.cpp  football.hpp  helpfulMaths.cpp  string_task.cpp
Codeforces/cmake/: addCompetition.cmake  todo.md
Codeforces/codecraft-21/: CMakeLists.txt
Codeforces/codecraft-21/include/: solve_a.hpp  solve_b.hpp
Codeforces/codecraft-21/src/: main.cpp
Codeforces/edu/prefixSum/: README.md  step1_a_prefixSum.cpp  step2_a_sumOnSegment.cpp  step2_b_xorOnSegment.cpp
Codeforces/edu/segmentTree/: README.md  a.cpp  competition.cpp  cryptography.cpp  earthquakes.cpp  numberOfDifferentOnSegment  numberOfDifferentOnSegment.cpp  numberOfInversionsOnSegment.cpp  segmentTreeAndInversions.cpp  segmentTreeFirstAbove.cpp  segmentTreeKthOne.cpp  segmentTreeMaxSegmentSum.cpp  segmentTreeMin.cpp  segmentTreeMinCount.cpp  segmentTreeSum.cpp  signAlternation.cpp  usingSegmentTreeForAdditionToSegment.cpp  usingSegmentTreeForIntersectingSegments.cpp  usingSegmentTreeForNestedSegments.cpp  usingSegmentTreeToRestorePermutationByInversions.cpp
Codeforces/itmoAcademy/: README.md  periodOfString.cpp  step1_problemA.cpp  step1_problemB.cpp  step1_problemC.cpp  step1_problemD.cpp  step2_problemA.cpp  step2_problemB.cpp  step2_problemC.cpp  step3_problemA.cpp  step4_problemA.cpp  step4_problemB.cpp  step4_problemC.cpp  step4_problemD.cpp  step4_problemE.cpp  step4_problemF.cpp  step4_problemG.cpp  step4_problemH.cpp  step4_problemI.cpp
Codeforces/optimizations/: README.md
Codeforces/tools/: logger.hpp
ITMO/pashka/: CMakeLists.txt  README.md  practice.md
ITMO/pashka/algos/: CMakeLists.txt  README.md
ITMO/pashka/algos/include/: bubble_sort.hpp  fast_finding_of_divisors.hpp  two_pointers_method.hpp
ITMO/pashka/algos/practice/: bubble_sort.hpp
ITMO/pashka/algos/src/: main.cpp
ITMO/pashka/algos/test/: CMakeLists.txt  test_bubble_sort.cpp
ITMO/pashka/algos/twoPointers/: README.md
ITMO/pashka/algos_2019_semester1/: README.md
ITMO/pashka/algos_2020_semester1/: README.md
ITMO/pashka/algos_2021_semester1/: README.md
ITMO/pashka/cmake/: packageAddTestAndPractice.cmake
ITMO/pashka/lectures/: CMakeLists.txt
ITMO/pashka/lectures/Semestr1/: CMakeLists.txt
LKSH/: CMakeLists.txt  README.md
LKSH/2008/: README.md
LKSH/2008/solutions/: day1.cpp
LKSH/2008/src/: kmp.cpp  mergeSort.cpp  prefixFunctionUsages.cpp  zFunction.cpp
LKSH/2020/: README.md
LKSH/sorting/: README.md
MFTI_FPMI/Stepanov/autumn_2021/: CMakeLists.txt  binary_heap.cpp  countingSort.cpp  mergeSort.cpp  sparseTable.cpp  stableCountingSort.cpp
MIT/CLRS/: CMakeLists.txt  README.md
MIT/CLRS/ch2/: insertionSort.cpp  mergeSortWithInsertSort.cpp
MIT/CLRS/ch32/: KMP  KMP.cpp  README.md  rabin-karp  rabin-karp.cpp
Skiena_programmingChallenges_book/: CMakeLists.txt  Dijkstra.cpp  FloydWarshall.cpp  README.md  combinations.cpp
cs106b/: CMakeLists.txt  README.md  drawTriangle.cpp  isAnagram.cpp  lec8.cpp  lec8.hpp  lec9.cpp  main.cpp  moveTower.cpp  permutations.cpp  queens8.cpp  subset.cpp  sudokuSolver.cpp  todo.md
e-maxx/: CMakeLists.txt  README.md
e-maxx/graphs/LCA/: LCA.cpp  LCA_chip_Dale.cpp  README.md
e-maxx/strings/: README.md  manaker.cpp  prefixFunction.cpp
freeCodeCamp/: CMakeLists.txt  README.md  freeCodeCamp.cpp
freeCodeCamp/DP/: allConstruct.cpp  bestSum.cpp  canConstruct.cpp  canSum.cpp  countConstruct.cpp  gridTraveller.cpp  howSum.cpp
freeCodeCamp/DataStructures/: BIT.cpp  CMakeLists.txt  README.md
freeCodeCamp/Recursion_and_DP/: CMakeLists.txt  README.md  allConstruct.cpp  bestSum.cpp  canConstruct.cpp  canSum.cpp  countConstruct.cpp  howSum.cpp
intuit/BaseAlgorithmsForPupil/: CMakeLists.txt  README.md
intuit/BaseAlgorithmsForPupil/cmake/: packageAddTestAndPractice.cmake  package_add_test.cmake
intuit/BaseAlgorithmsForPupil/docs/: CMakeLists.txt
intuit/BaseAlgorithmsForPupil/lec10_combinatorics/: CMakeLists.txt  README.md
intuit/BaseAlgorithmsForPupil/lec10_combinatorics/include/: find_kth_permutation.hpp  find_permutation_number.hpp  permutations.hpp
intuit/BaseAlgorithmsForPupil/lec10_combinatorics/src/: main.cpp
intuit/BaseAlgorithmsForPupil/lec10_combinatorics/test/: CMakeLists.txt
intuit/BaseAlgorithmsForPupil/lec1_complexity_of_algorithms/: CMakeLists.txt  README.md  history.md
intuit/BaseAlgorithmsForPupil/lec1_complexity_of_algorithms/include/: MultiStackMemoryMgmt.hpp  StackArrayBased.hpp  StackLinkedListBased.hpp  StaticDoubleLinkedList.hpp  StaticMultiLists.hpp  StaticSingleLinkedList.hpp  bubble_sort.hpp  my_deque.hpp  my_queue.hpp  right_brackets_multiple_types.hpp  right_brackets_one_type.hpp
intuit/BaseAlgorithmsForPupil/lec1_complexity_of_algorithms/practice/: bubble_sort.hpp  my_deque.hpp  my_queue.hpp  my_stack.hpp  my_static_list.hpp  right_brackets_multiple_types.hpp  right_brackets_one_type.hpp
intuit/BaseAlgorithmsForPupil/lec2_sorting_and_search/: 3RdPartyRefs.md  CMakeLists.txt  README.md  todo.txt
intuit/BaseAlgorithmsForPupil/lec3_dynamic_programming/: CMakeLists.txt  README.md  todo.md
intuit/BaseAlgorithmsForPupil/lec4_graph_theory/: CMakeLists.txt  README.md  todo.md
intuit/BaseAlgorithmsForPupil/lec5_graph_theory/: CMakeLists.txt  README.md  todo.md
intuit/BaseAlgorithmsForPupil/lec6_graph_theory/: CMakeLists.txt  README.md  todo.txt
intuit/BaseAlgorithmsForPupil/lec7_geometry/: CMakeLists.txt  README.md
intuit/BaseAlgorithmsForPupil/lec8_geometry/: CMakeLists.txt  README.md
intuit/BaseAlgorithmsForPupil/lec9_long_arithmetic/: CMakeLists.txt  README.md
intuit/BaseAlgorithmsForPupil/scripts/: generateCodeCoverage.sh
(+1035 files in other folders)
