cmake_minimum_required(VERSION 3.16)
project(algorithmsAndDataStructures)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithmsAndDataStructures main.cpp)

add_subdirectory(intuit/baseAndAdvancedAlgsForPupil)
add_subdirectory(LKSH)
add_subdirectory(e-maxx)
add_subdirectory(Codeforces)
add_subdirectory(compscicenter)
add_subdirectory(Rucode)
add_subdirectory(Skiena_programmingChallenges_book)
add_subdirectory(MIT/CLRS)