project(CLRS)

### ch2
add_executable(insertionSort ch2/insertionSort.cpp)
add_executable(selectionSort ch2/selectionSort.cpp)
add_executable(mergeSort ch2/mergeSort.cpp)
add_executable(countInversions ch2/countInversions.cpp)
add_executable(mergeSortWithInsertSort ch2/mergeSortWithInsertSort.cpp)
add_executable(twoSum ch2/twoSum.cpp)
add_executable(hornersRule ch2/hornersRule.cpp)

### ch32
add_executable(rabin-karp ch32/rabin-karp.cpp)
add_executable(KMP ch32/KMP.cpp)
