name:                hw1sc
version:             0.1.0.0
synopsis:            Synopsis for task 1 second chance
description:         Task 1 second chance for FP ITMO course

homepage:            https://github.com/hazzus/funcprog/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Pavel Bezborodov
maintainer:          dfa.sro591@gmail.com
copyright:           2020 Pavel Bezborodov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library 
  hs-source-dirs:      src
  exposed-modules:     Parser Base Simple Hard
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite parsers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 5
                     , hspec >= 1.3
                     , QuickCheck
                     , hw1sc
  default-language:    Haskell2010
